<resources>
    <string name="app_name">AmGhotok</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">FirstActivity</string>
    <string name="my_profile">My Profile</string>
    <string name="partner_profile">Partner Profile</string>
    <string name="search">Search</string>
    <string name="about_us">About Us</string>
    <string name="term_n_condition">TermsNCondition</string>
    <string name="my_matches">My Matches</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birthday">Birthday</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="address">Address</string>
    <string name="place">Place</string>
    <string name="district">District</string>
    <string name="religion">Religion</string>
    <string name="about_me">About Me</string>
    <string name="submit">Submit</string>
    <string name="all_search">All</string>
    <string name="newest_search">Newest</string>
    <string name="featured_search">Featured</string>
    <string name="i_am_a">I am a</string>
    <string name="seeking_a">Seeking a</string>
    <string name="who_is_from">Who is from</string>
    <string name="to">to</string>
    <string name="marital_status">Marital status</string>
    <string name="children">Children</string>
    <string name="name">Name</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="educatinal_status">Educatinal Status</string>
    <string name="country">Country</string>
    <string name="mirpur">Mirpur</string>
    <string name="kajol">Kajol</string>
    <string name="image">Image</string>
    <string name="submitt">Submitt</string>
    <string name="text">Give informatioh how your partner will be</string>
    <string name="smoke">Smoke</string>
    <string name="drink">Drink</string>
	<string name="text1">Any extra charectaristics about your partner</string>
	 <string name="back">Back</string>
    <string-array name="sex_array">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string-array name="marital_array">
        <item>Married</item>
        <item>Unmarried</item>
    </string-array>
    <string-array name="children_array">
        <item>No Children</item>
        <item>Have Children</item>
    </string-array>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_partners_profile">PartnersProfileActivity</string>
    <string name="title_activity_my_matches">MyMatchesActivity</string>
    <string name="title_activity_terms_condition">TermsConditionActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string-array name="educational_array">
        <item>SSC</item>
        <item>HSC</item>
        <item>Honors</item>
        <item>Masters</item>
        <item>Phd</item>
        <item>Doctor</item>
        <item>Engineer</item>
        <item>Banker</item>
        <item>Businessman</item>
        <item>Housewife</item>
        <item>Teacher</item>
    </string-array>
    <string-array name="zilla_array">
        <item>Sylhet</item>
        <item>Sunamganj</item>
        <item>Moulvibazar</item>
        <item>Habiganj</item>
        <item>Thakurgaon</item>
        <item>Rangpur</item>
        <item>Panchagarh</item>
        <item>Nilphamari</item>
        <item>Lalmonirhat</item>
        <item>Kurigram</item>
        <item>Gaibandha</item>
        <item>Dinajpur</item>
        <item>Sirajganj</item>
        <item>Rajshahi</item>        
        <item>Pabna</item>
        <item>Nawabganj</item>
        <item>Natore</item>
        <item>Naogaon</item>
        <item>Joypurhat</item>
        <item>Bogra</item>
        <item>Satkhira</item>
        <item>Narail</item>
        <item>Meherpur</item>
        <item>Magura</item>
        <item>Kushtia</item>
        <item>Khulna</item>
        <item>Jhenaidah</item>
        <item>Jessore</item>
        <item>Chuadanga</item>
        <item>Bagerhat</item>
        <item>Tangail</item>
        <item>Sherpur</item>
        <item>Shariatpur</item>
        <item>Rajbari</item>
        <item>Netrakona</item>
        <item>Narsingdi</item>
        <item>Narayanganj</item>
        <item>Mymensingh</item>
        <item>Munshiganj</item>
        <item>Manikganj</item>       
        <item>Madaripur</item>
        <item>Kishoreganj</item>
        <item>Jamalpur</item>
        <item>Gopalganj</item>
        <item>Gazipur</item>
        <item>Faridpur</item>
        <item>Dhaka</item>
        <item>Rangamati</item>
        <item>Noakhali</item>
        <item>Lakshmipur</item>
        <item>Khagrachhari</item>
        <item>Feni</item>
        <item>CoxsBazar</item>
        <item>Comilla</item>
        <item>Chittagong</item>
        <item>Chandpur</item>
        <item>Brahmanbaria</item>
        <item>Bandarban</item>
        <item>Pirojpur</item>
        <item>Patuakhali</item>
        <item>Jhalokati</item>
        <item>Bhola</item>
        <item>Barisal</item>
        <item>Barguna</item>         
    </string-array>
</resources>