<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_bottom1"
         >

        <ImageButton
            android:id="@+id/myMatchesImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/matrimony2"
            android:contentDescription="@string/my_matches" />

        <ImageButton
            android:id="@+id/myProfileImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/items"
            android:src="@drawable/myprofile"            
            android:contentDescription="@string/my_profile" />
        
        <ImageButton
            android:id="@+id/partnerProfileImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/items"
            android:src="@drawable/partnersprofil"             
            android:contentDescription="@string/partner_profile"  />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/myMatchesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_matches" />

        <TextView
            android:id="@+id/myProfileTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/items"
            android:text="@string/my_profile" />

        <TextView
            android:id="@+id/partnerProfileTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/items"
            android:text="@string/partner_profile" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_bottom2" >

        <ImageButton
            android:id="@+id/searchImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/searchbutton"
            android:contentDescription="@string/search"            />        
		<ImageButton
            android:id="@+id/termsImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/items"
            android:src="@drawable/termscondition" 
            android:contentDescription="@string/term_n_condition"
            />

        <ImageButton
            android:id="@+id/aboutUsImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/items"
            android:src="@drawable/aboutus"
            android:contentDescription="@string/about_us"
              />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/SearchTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <TextView
            android:id="@+id/termsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/items"
            android:text="@string/term_n_condition" />

        <TextView
            android:id="@+id/aboutUsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/items"
            android:text="@string/about_us" />

    </TableRow>

</TableLayout>